--- a/.env
+++ b/.env
@@ -5,10 +5,14 @@
 # For development: http://localhost:8000/api
 # For production: https://your-backend-domain.com/api
 # Note: Vite uses VITE_ prefix instead of REACT_APP_
-VITE_API_URL=http://127.0.0.1:8000/api
+# IMPORTANT: Must use HTTP (not HTTPS) for local development
+VITE_API_URL=https://jhp1yoopi9.execute-api.us-east-1.amazonaws.com/api
 
 # TMDB Configuration (backend handles image URLs automatically)
 VITE_TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/w500
 
 # Optional: Enable debug logging
 VITE_DEBUG=false
+
+# Disable API calls for development (use sample data only)
+VITE_DISABLE_API=false
