--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
-  "version": 2,
-  "name": "nextwatch-entertainment",
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
@@ -34,19 +23,5 @@
         }
       ]
     }
-  ],
-  "env": {
-    "VITE_API_URL": "@vite_api_url",
-    "VITE_TMDB_IMAGE_BASE_URL": "https://image.tmdb.org/t/p/w500",
-    "VITE_DEBUG": "false",
-    "VITE_DISABLE_API": "false"
-  },
-  "build": {
-    "env": {
-      "VITE_API_URL": "@vite_api_url",
-      "VITE_TMDB_IMAGE_BASE_URL": "https://image.tmdb.org/t/p/w500",
-      "VITE_DEBUG": "false",
-      "VITE_DISABLE_API": "false"
-    }
-  }
+  ]
 }
